USE master;
GO

DROP DATABASE IF EXISTS School;
GO

CREATE DATABASE School;
GO

USE School;
GO

CREATE TABLE Departments (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Name VARCHAR(100) NOT NULL,
    HeadInstructorId INT NULL
);
GO

CREATE TABLE Instructors (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Name VARCHAR(100) NOT NULL,
    Email VARCHAR(100) UNIQUE NOT NULL,
    SupervisorId INT NULL,
    DepartmentId INT NOT NULL,
    FOREIGN KEY (SupervisorId) REFERENCES Instructors(Id) ON DELETE NO ACTION,
    FOREIGN KEY (DepartmentId) REFERENCES Departments(Id) ON DELETE CASCADE
);
GO

ALTER TABLE Departments
ADD CONSTRAINT FK_HeadInstructor FOREIGN KEY (HeadInstructorId) REFERENCES Instructors(Id) ON DELETE NO ACTION; -- Prevent multiple cascade paths
GO

CREATE TABLE Tracks (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Name VARCHAR(100) NOT NULL,
    DepartmentId INT NOT NULL,
    FOREIGN KEY (DepartmentId) REFERENCES Departments(Id) ON DELETE CASCADE
);
GO

CREATE TABLE Students (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Name VARCHAR(100) NOT NULL,
    Email VARCHAR(100) UNIQUE NOT NULL,
    TrackId INT NOT NULL,
    FOREIGN KEY (TrackId) REFERENCES Tracks(Id) ON DELETE CASCADE
);
GO

CREATE TABLE Courses (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Title VARCHAR(100) NOT NULL,
    CreditHours INT NOT NULL
);
GO

CREATE TABLE CourseTrack (
    TrackId INT NOT NULL,
    CourseId INT NOT NULL,
    PRIMARY KEY (TrackId, CourseId),
    FOREIGN KEY (TrackId) REFERENCES Tracks(Id) ON DELETE CASCADE,
    FOREIGN KEY (CourseId) REFERENCES Courses(Id) ON DELETE CASCADE
);
GO